kubernetes/resources/05-monitoring/grafana/network.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-home
    kubernetes.io/ingress.class: nginx
  labels:
    app: grafana
spec:
  tls:
  - hosts:
    - grafana.k8s.iaminyourpc.xyz
    secretName: tls-grafana-k8s-iaminyourpc-xyz
  rules:
  - host: grafana.k8s.iaminyourpc.xyz
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              number: 3000
